Solve: BOJ_15649