@@ -18,7 +18,7 @@ import java.util.*;
 public class Combination_Basic {
     public static int n, m;  // 전체 개수, 선택 개수
     public static int[] arr;  // 전체 요소 배열
-    public static LinkedList<Integer> selected = new LinkedList<>();  // 선택 요소 리스트
+    public static List<Integer> selected = new ArrayList<>();  // 선택 요소 리스트
     public static int answer = 0;  // 가능한 경우의 수
 
     public static void comb(int start, int cnt) {
@@ -32,7 +32,7 @@ public class Combination_Basic {
             selected.add(arr[i]);
             comb(i+1, cnt+1);  // comb(start+1, cnt+1); 로 작성하면 틀림. (선택한 현재 원소를 제외하고 뒤의 것들까지 선택 가능.)
             
-            selected.removeLast();
+            selected.remove(selected.size()-1);
         }
     }
 
