@@ -20,7 +20,7 @@ import java.util.*;
 public class Combination_Repetition {
     public static int n, m;  // 전체 개수, 선택 개수
     public static int[] arr;  // 전체 요소 배열
-    public static LinkedList<Integer> selected = new LinkedList<>();  // 선택 요소 리스트
+    public static List<Integer> selected = new ArrayList<>();  // 선택 요소 리스트
     public static int answer = 0;  // 가능한 경우의 수
 
     public static void comb(int start, int cnt) {
@@ -34,7 +34,7 @@ public class Combination_Repetition {
             selected.add(arr[i]);
             comb(i, cnt+1);  // 일반적인 조합과는 다르게, start 인덱스를 i+1 하지않음. (선택한 현재 원소를 포함하여 뒤의 것들까지 선택 가능.)
             
-            selected.removeLast();
+            selected.remove(selected.size()-1);
         }
     }
 
