@@ -19,7 +19,7 @@ import java.util.*;
 public class Permutation_Repetition {
     public static int n, m;  // 전체 개수, 선택 개수
     public static int[] arr;  // 전체 요소 배열
-    public static LinkedList<Integer> selected = new LinkedList<>();  // 선택 요소 리스트
+    public static List<Integer> selected = new ArrayList<>();  // 선택 요소 리스트
     public static int answer = 0;  // 가능한 경우의 수
 
     public static void perm(int cnt) {
@@ -33,7 +33,7 @@ public class Permutation_Repetition {
             selected.add(arr[i]);
             perm(cnt+1);
             
-            selected.removeLast();
+            selected.remove(selected.size()-1);
         }
     }
 
